@@ -27,6 +27,8 @@ if build['xcursor']:
 
 if build['imlib2']:
     bg_sources += [ 'bg_imlib2.c' ]
+if build['xrender']:
+    bg_sources += [ 'bg_shade.c']
 
 alock_sources += auth_sources + bg_sources + cursor_sources
 
